--- a/src/style.scss
+++ b/src/style.scss
@@ -5,7 +5,7 @@
 }
 
 .mainBox{
-    width: 1200px;
+    width: 1400px;
     margin: 0 auto;
 
 }
@@ -71,4 +71,7 @@
 
     .textBlu{
     color:#048AB8 !important;
+    }
+    .colorRed{
+        color: #950952;
     }
